--- a/images/openwisp_openvpn/supervisord.conf
+++ b/images/openwisp_openvpn/supervisord.conf
@@ -28,3 +28,17 @@ stderr_logfile=/dev/stdout
 # avoid invalid seek error
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
+
+[program:crond]
+user=root
+directory=/
+command=/usr/sbin/crond -f -l 9 -L /dev/stdout
+autostart=true
+autorestart=true
+stopsignal=INT
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stdout
+# Set logfile maxbytes to 0 to
+# avoid invalid seek error
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
